// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MealModal should render correctly when type prop is addMeal 1`] = `
<Connect(Form)
  meal={null}
  meta={
    Object {
      "btnText": "ADD MEAL",
    }
  }
  type="addMeal"
/>
`;

exports[`MealModal should render correctly when type prop is editMeal 1`] = `
<Connect(Form)
  meal={null}
  meta={
    Object {
      "btnText": "SAVE MEAL",
    }
  }
  type="editMeal"
/>
`;
